// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SimpleTag renders as expected with a lupe icon 1`] = `
<span
  className="lab-tag  lab-tag--has-left-icon lab-tag--pale"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="presentation"
  tabIndex="-1"
>
  <span
    className="lab-icon lab-icon--lupe lab-icon--black-75 lab-icon--petit lab-tag--left-icon"
  />
  Test render SimpleTag with lupe icon
</span>
`;

exports[`SimpleTag renders as expected with a purple color 1`] = `
<span
  className="lab-tag  lab-tag--purple-pale"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="presentation"
  tabIndex="-1"
>
  Test render purple SimpleTag
</span>
`;

exports[`SimpleTag renders as expected with a thumb 1`] = `
<span
  className="lab-tag  lab-tag--has-thumb lab-tag--pale"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="presentation"
  tabIndex="-1"
>
  <img
    alt=""
    className="lab-tag__thumb"
    src="fake-thumb"
  />
  Test render SimpleTag with thumb
</span>
`;

exports[`SimpleTag renders as expected with a vivid skin 1`] = `
<span
  className="lab-tag  lab-tag--vivid"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="presentation"
  tabIndex="-1"
>
  Test render vivid SimpleTag
</span>
`;

exports[`SimpleTag renders as expected with disabled as true 1`] = `
<span
  className="lab-tag  lab-tag--disabled lab-tag--pale"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="presentation"
  tabIndex="-1"
>
  Test render disabled SimpleTag
</span>
`;

exports[`SimpleTag renders as expected with outline as true 1`] = `
<span
  className="lab-tag  lab-tag--outline lab-tag--pale"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="presentation"
  tabIndex="-1"
>
  Test render outline SimpleTag
</span>
`;

exports[`SimpleTag renders with base props 1`] = `
<span
  className="lab-tag  lab-tag--pale"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="presentation"
  tabIndex="-1"
>
  Test render SimpleTag
</span>
`;
